--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ DB_PORT=port
 DB_USER=user
 DB_PASSWORD=password
 DB_NAME=db_name
-DATABASE_URL=database_url
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
